[gd_scene load_steps=12 format=2]

[ext_resource path="res://textures/characters/player2.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/BlaisePlayer.gd" type="Script" id=2]
[ext_resource path="res://sounds/hit.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 7 )

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="Animation" id=8]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 2, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("ShootSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "shoot"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ShootSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="BlaisePlayer" type="KinematicBody2D"]
z_index = 400
z_as_relative = false
collision_layer = 0
script = ExtResource( 2 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 1, -8 )
scale = Vector2( 1.5, 1.4 )
texture = ExtResource( 1 )
hframes = 5
frame = 1

[node name="ShootSprite" type="Sprite" parent="."]
position = Vector2( 1, -8 )
scale = Vector2( 1.5, 1.4 )
texture = ExtResource( 1 )
hframes = 5
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="OnGround" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 1 )

[node name="OnGroundLeft" type="RayCast2D" parent="."]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="OnGroundRight" type="RayCast2D" parent="."]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="OnLeftWall" type="RayCast2D" parent="."]
position = Vector2( -8, -4 )
enabled = true
cast_to = Vector2( -5, 0 )

[node name="OnRightWall" type="RayCast2D" parent="."]
position = Vector2( 8, -4 )
enabled = true
cast_to = Vector2( 4, 0 )

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -8 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CameraPosition" type="Position2D" parent="."]
position = Vector2( 0, -50 )

[node name="Camera2D" type="Camera2D" parent="CameraPosition"]
current = true
smoothing_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="HeartbeatDetector" type="Area2D" parent="."]
position = Vector2( 0, -16 )
collision_layer = 2147483648
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeartbeatDetector"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="hurtsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -18.444
pitch_scale = 1.62

[node name="anims" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/die = SubResource( 8 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="gunanims" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 6 )
anims/shoot = SubResource( 7 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
